Demo 14 - Les formulaires (Validators)

--- a/src/app/demos/demo14/demo14.component.html
+++ b/src/app/demos/demo14/demo14.component.html
@@ -28,13 +28,10 @@
         </select>
     </div>
 
-    <button
-        *ngIf="name && email && password && gender"
-        (click)="send()"
-    >
+    <button *ngIf="name && email && password && gender" (click)="send()">
         Envoyer
     </button>
-    
+
 </div>
 
 
@@ -42,27 +39,34 @@
 
 <div class="container">
     <form [formGroup]="myForm">
+
         <div class="dblock">
             <label for="name">Name :</label>
-            <input type="text" name="name" id="name" formControlName="name">
+            <input type="text" id="name" formControlName="name" [ngClass]="{error : myForm.controls['name'].touched && !myForm.controls['name'].valid}">
 
-            <span *ngIf=" myForm.controls['name'].touched && !myForm.controls['name'].valid">Requis + caractères entre 3
-                et 20</span>
+            <span *ngIf="myForm.controls['name'].touched && !myForm.controls['name'].valid" class="error">
+                Requis + caractères entre 3 et 20
+            </span>
         </div>
+        
         <div class="dblock">
             <label for="email">Email :</label>
-            <input type="email" name="email" id="email" formControlName="email">
-            <span *ngIf=" myForm.controls['email'].touched && !myForm.controls['email'].valid">Requis + email
-                format</span>
+            <input type="email" name="email" id="email" formControlName="email" [ngClass]="{error: !myForm.controls['email'].valid}">
+            <span *ngIf=" myForm.controls['email'].touched && !myForm.controls['email'].valid" class="error">
+                Requis + email format
+            </span>
 
         </div>
+        
         <div class="dblock">
             <label for="password">Password :</label>
-            <input type="password" name="password" id="password" formControlName="password">
-            <span *ngIf=" myForm.controls['password'].touched && !myForm.controls['password'].valid">Requis + caractères
-                entre 6 et 15</span>
+            <input type="password" name="password" id="password" formControlName="password" [ngClass]="{error: !myForm.controls['password'].valid}">
+            <span *ngIf=" myForm.controls['password'].touched && !myForm.controls['password'].valid" class="error">
+                Requis + caractères entre 6 et 15
+            </span>
 
         </div>
+        
         <div class="dblock">
             <label for="gender">Gender :</label>
             <select formControlName="gender" id="gender">
@@ -70,27 +74,28 @@
                 <option value="Female">Female</option>
                 <option value="Other">Other</option>
             </select>
-            <span *ngIf=" myForm.controls['gender'].touched && !myForm.controls['gender'].valid">Requis </span>
+            <span *ngIf=" myForm.controls['gender'].touched && !myForm.controls['gender'].valid" class="error">
+                Requis
+            </span>
         </div>
-        <button *ngIf="myForm.valid" (click)="sendFG()">Envoyer
+
+        <button (click)="sendFG()" [disabled]="!myForm.valid">
+            Envoyer
         </button>
 
-        <br><br><br>
+        
+        <h3>Form Control (abtractControl) :</h3>
+        <span *ngIf="myForm.pristine">(pristine)</span>&nbsp;
+        <span *ngIf="myForm.touched">(touched)</span>&nbsp;
+        <span *ngIf="myForm.invalid">(invalid)</span>&nbsp;
+        <span *ngIf="myForm.valid">(valid)</span>&nbsp;
 
-        Form Control (abtractControl)
-        <span *ngIf="myForm.pristine">(pristine)</span>
-        <span *ngIf="myForm.touched">(touched)</span>
-        <span *ngIf="myForm.invalid">(invalid)</span>
-        <span *ngIf="myForm.valid">(valid)</span>
+        <h3>Form Control Individual (control) :</h3>
 
-        <br><br><br>
-
-        Form Control Individual (control)
-
-        <span *ngIf="myForm.controls['name'].valid">Name: (valid)</span>
-        <span *ngIf="myForm.controls['email'].valid">Email: (valid)</span>
-        <span *ngIf="myForm.controls['password'].valid">Password: (valid)</span>
-        <span *ngIf="myForm.controls['gender'].valid">Gender: (valid)</span>
+        <p *ngIf="myForm.controls['name'].valid">Name: (valid)</p>
+        <p *ngIf="myForm.controls['email'].valid">Email: (valid)</p>
+        <p *ngIf="myForm.controls['password'].valid">Password: (valid)</p>
+        <p *ngIf="myForm.controls['gender'].valid">Gender: (valid)</p>
 
     </form>
 
