--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                 <li><a routerLink="/demos/demo11" routerLinkActive="active-link">Demo 11 - Les Input & Output</a></li>
                 <li><a routerLink="/demos/demo12" routerLinkActive="active-link">Demo 12 - Services et Injection de dépendances</a></li>
                 <li><a routerLink="/demos/demo13" routerLinkActive="active-link">Demo 13 - Cycle de vie d'un composant</a></li>
-                <li><a routerLink="/demos/demo14" routerLinkActive="active-link">Demo 14 - Les formulaires</a></li>
+                <li><a routerLink="/demos/demo14" routerLinkActive="active-link">Demo 14 - Les formulaires (Validators)</a></li>
                 <li><a routerLink="/demos/demo15" routerLinkActive="active-link">Demo 15 - Les Customs Validators</a></li>
                 <li><a routerLink="/demos/demo16" routerLinkActive="active-link">Demo 16 - Le routing</a></li>
                 <li><a routerLink="/demos/demo17" routerLinkActive="active-link">Demo 17 - Les Guards</a></li>
