--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,10 @@ hr {
     border-top: 1px solid var(--text-regular);
 }
 
+input {
+    padding: 5px;
+}
+
 
 // layout
 
@@ -113,6 +117,10 @@ hr {
 .dblock > * {
     display: block;
     margin: 10px 0;
+}
+
+.error {
+    color: red;
 }
 
 //debug
