--- a/src/app/demos/demo10/demo10.component.html
+++ b/src/app/demos/demo10/demo10.component.html
@@ -1,4 +1,4 @@
-<h2>Demo 10 - Les Customs Directives</h2>
+<h2>Demo 10 - Les Custom Directives</h2>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis commodi, fugit, reprehenderit temporibus nostrum
