--- a/src/app/exercices/exo01/exo01.component.html
+++ b/src/app/exercices/exo01/exo01.component.html
@@ -1,8 +1,8 @@
 <h2>Exercice 01 - Créer son profil</h2>
 
-<div class="">
+<div class="container">
     <p>
-        Vous devez créer une application Angular pour permettre aux utilisateurs de créer leur propre profil personnel.
+        Vous devez créer une application Angular pour permettre aux utilisateurs de créer leur propre profil personnel. <br>
         L'application doit contenir les champs suivants :
     </p>
 
@@ -15,6 +15,7 @@
         <li>Image de profil (optionnelle)</li>
     </ul>
 </div>
+
 <hr>
 
 <h1>{{ genre === 'homme' ? 'Mr.' : 'Mme' }} {{nom}} {{prenom}}</h1>
