--- a/src/app/demos/demo16/demo16.component.html
+++ b/src/app/demos/demo16/demo16.component.html
@@ -1,1 +1,19 @@
-<p>demo16 works!</p>
+<h2>Demo 16 - Le routing</h2>
+
+<p>
+    La classe Router permet de gérer les routes au sein du composant
+</p>
+
+<h3>Redirection vers ce composant</h3>
+
+<button (click)="navigate()">/demos/routage</button>
+
+<h3>Redirection vers ce composant avec paramètre</h3>
+<button (click)="navigateWithParam()">/demos/routage/42</button>
+
+<p *ngIf="id">L'id transmit par l'url vaut {{ id }}</p>
+
+<h3>Redirection vers ce composant avec un queryParam</h3>
+<button (click)="navigateWithQuery()">/demos/routage</button>
+
+<p *ngIf="name">queryParam transmis : {{ name }}</p>
