--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+p {
+    padding: 5px 0;
+    word-spacing: 1px;
+    text-align: justify;
+}
+
 ul {
     list-style: disc;
 }
@@ -121,6 +127,10 @@ input {
 
 .error {
     color: red;
+}
+
+.border {
+    border: 1px solid var(--primary);
 }
 
 //debug
