--- a/src/app/exercices/exo09/exo09.component.html
+++ b/src/app/exercices/exo09/exo09.component.html
@@ -12,7 +12,7 @@
 
 <div class="dblock">
     <label>Nom du produit :</label>
-    <input type="text" [(ngModel)]="product_name">
+    <input type="text" [(ngModel)]="product_name" id="product_name">
 
     <label>Quantité :</label>
     <input type="number" min="1" [(ngModel)]="product_qty">
@@ -24,7 +24,10 @@
 
 <ul *ngIf="cart.length > 0;else errorMessage">
     <li *ngFor="let item of cart; let i = index">
-        {{item.name}} : <button>-</button>{{item.qty}}<button>+</button> ({{item.dateAdd | date : "dd/MM/yyyy à HH:mm:ss"}})<button>❌</button>
+        <button (click)="removeProduct(item)">❌</button> 
+        {{ item.name }} : {{ item.qty }} ({{ item.dateAdd | date : "dd/MM/yyyy à HH:mm:ss" }})
+        <button (click)="decrease(i)">-</button>
+        <button (click)="increase(i)">+</button>
     </li>
 </ul>
 
