--- a/src/app/shared/fourofour/fourofour.component.html
+++ b/src/app/shared/fourofour/fourofour.component.html
@@ -1,2 +1,6 @@
 <h1>Page non trouvée</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi est et error atque. Quam illum animi at dolore consequuntur numquam, minima qui, iure consectetur facere explicabo, possimus exercitationem quibusdam.</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi est
+  et error atque. Quam illum animi at dolore consequuntur numquam, minima qui,
+  iure consectetur facere explicabo, possimus exercitationem quibusdam.
+</p>
