Énoncé - Exercice 04 - Toggle Password

--- a/src/app/demos/demo12/demo12.component.html
+++ b/src/app/demos/demo12/demo12.component.html
@@ -1,5 +1,8 @@
 <h2>Demo 12 - Services et Injection de dépendances</h2>
 
+<p>
+    Injection de dépendance n'est pas native à Angular. C'est un paradygme de développement qui permet de gérer les dépendances entre les différents objets de l'application.
+</p>
 
 <p>État de connexion : {{ isConnected ? 'Connecté' : 'Déconnecté' }}</p>
 
