--- a/src/app/exercices/exo04/exo04.component.html
+++ b/src/app/exercices/exo04/exo04.component.html
@@ -1,1 +1,8 @@
-<p>exo04 works!</p>
+<h2>Exercice 04 - Toggle password</h2>
+
+<p>
+    Créer une application qui affiche un formation de connexion où l'utilisateur peut rendre visible son mot de passe ou
+    non.
+</p>
+
+<hr>
