Factoring + demo 19 storage

--- a/src/app/demos/demo06/demo06.component.html
+++ b/src/app/demos/demo06/demo06.component.html
@@ -1,13 +1,17 @@
 <h2>Demo 06 - Les pipes</h2>
 
 <p>
-    Les pipes (ou filtres) sont des fonctions qui permettent de transformer les données affichées dans la vue. Les pipes sont utilisés pour formater, trier, filtrer ou limiter les données affichées dans la vue.
+    Les pipes (ou filtres) sont des fonctions qui permettent de transformer les données affichées dans la vue. Les pipes
+    sont utilisés pour formater, trier, filtrer ou limiter les données affichées dans la vue.
 </p>
 <p>
-    Les pipes sont utilisés dans les expressions d'interpolation ({{"{{ expression | pipe }}"}}) ou les directives de liaison de propriété ([prop]="expression | pipe").
+    Les pipes sont utilisés dans les expressions d'interpolation ({{"{{ expression | pipe }}"}}) ou les directives de
+    liaison de propriété ([prop]="expression | pipe").
 </p>
 <p>
-    Angular fournit un certain nombre de pipes intégrés, tels que "date", "uppercase", "lowercase", "currency", "decimal", "percent", "async", "json", etc. Il est également possible de créer des pipes personnalisés pour répondre aux besoins spécifiques de l'application.
+    Angular fournit un certain nombre de pipes intégrés, tels que "date", "uppercase", "lowercase", "currency",
+    "decimal", "percent", "async", "json", etc. Il est également possible de créer des pipes personnalisés pour répondre
+    aux besoins spécifiques de l'application.
 </p>
 
 <h3>Exemple :</h3>
