--- a/src/app/demos/demo07/demo07.component.html
+++ b/src/app/demos/demo07/demo07.component.html
@@ -1,7 +1,9 @@
 <h2>Demo 7 - Les Custom Pipes</h2>
 
 <p>
-    Les custom pipes (ou filtres personnalisés) sont des pipes créés par les développeurs pour répondre aux besoins spécifiques de leur application. Les custom pipes sont créés en utilisant la classe PipeTransform fournie par Angular, qui contient une méthode transform permettant de transformer les données en entrée.
+    Les custom pipes (ou filtres personnalisés) sont des pipes créés par les développeurs pour répondre aux besoins
+    spécifiques de leur application. Les custom pipes sont créés en utilisant la classe PipeTransform fournie par
+    Angular, qui contient une méthode transform permettant de transformer les données en entrée.
 </p>
 
 <p>
