--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -61,7 +61,7 @@
           <a routerLink="/demos/demo18" routerLinkActive="active-link">❌ Demo 18 - Resolver</a>
         </li>
         <li>
-          <a routerLink="/demos/demo19" routerLinkActive="active-link">❌ Demo 19 - Les Storages</a>
+          <a routerLink="/demos/demo19" routerLinkActive="active-link">✅ Demo 19 - Les Storages</a>
         </li>
         <li>
           <a routerLink="/demos/demo20" routerLinkActive="active-link">❌ Demo 20 - Les Observables</a>
