--- a/src/app/demos/demo11/children-input/children-input.component.html
+++ b/src/app/demos/demo11/children-input/children-input.component.html
@@ -1,7 +1,8 @@
 <h3>Composant enfant input</h3>
 
 <p>
-    Pour définir un input dans un composant enfant, on utilise le décorateur @Input() suivi du nom de la propriété. Le composant parent peut alors fournir une valeur pour cette propriété lorsqu'il utilise le composant enfant.
+    Pour définir un input dans un composant enfant, on utilise le décorateur @Input() suivi du nom de la propriété. Le
+    composant parent peut alors fournir une valeur pour cette propriété lorsqu'il utilise le composant enfant.
 </p>
 
 <p [ngClass]="colorChild">Message provenant du parent : {{ messageFromParent }}</p>
