--- a/src/app/demos/demo11/demo11.component.html
+++ b/src/app/demos/demo11/demo11.component.html
@@ -1,7 +1,9 @@
 <h2>Demo 11 - Les Input & Output</h2>
 
 <p>
-    Les inputs et les outputs sont des mécanismes de communication entre les composants. Les inputs permettent à un composant parent de fournir des données à un composant enfant, tandis que les outputs permettent à un composant enfant d'émettre des événements vers son composant parent.
+    Les inputs et les outputs sont des mécanismes de communication entre les composants. Les inputs permettent à un
+    composant parent de fournir des données à un composant enfant, tandis que les outputs permettent à un composant
+    enfant d'émettre des événements vers son composant parent.
 </p>
 
 <!-- Input -->
@@ -12,7 +14,7 @@
 
 <!-- Output -->
 <div class="block">
-    <app-children-output (emitToParent)="receiveEmit($event)"/>
+    <app-children-output (emitToParent)="receiveEmit($event)" />
     <p>Message venant de l'enfant vers parent : {{ messageFromChild }}</p>
 </div>
 
