--- a/src/app/demos/demo06/demo06.component.html
+++ b/src/app/demos/demo06/demo06.component.html
@@ -74,7 +74,7 @@
 <p>Avant : {{ 12.34 | currency : 'EUR' }}</p>
 <p>Avant : {{ 12.34 | currency : 'EUR' : 'symbol' }}</p>
 <p>Avant : {{ 12.34 | currency : 'EUR' : 'code' }}</p>
-<p>Avant : {{ 12.34 | currency : 'EUR' : 'symbol' : '4.2-2'}}</p>
+<p>Avant : {{ 12345.6789 | currency : 'EUR' : 'symbol' : '4.2-2' : 'fr-FR'}}</p>
 
 <h4>JSON</h4>
 
