--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -147,12 +147,12 @@
           </a>
         </li>
         <li>
-          <a routerLink="/exercices/exo07" routerLinkActive="active-link">
+          <a routerLink="/exercices/exo07-1" routerLinkActive="active-link">
             ✅ Exercice 07.1 - Le chronomètre (Pipe)
           </a>
         </li>
         <li>
-          <a routerLink="/exercices/exo08" routerLinkActive="active-link">
+          <a routerLink="/exercices/exo07-2" routerLinkActive="active-link">
             ✅ Exercice 07.2 - Convertisseur de degré C° |
             F°</a>
         </li>
