--- a/src/app/exercices/exo08/exo08.component.html
+++ b/src/app/exercices/exo08/exo08.component.html
@@ -8,16 +8,58 @@
 <p>Permettre à l'utilisateur de transformer le quadrilatère en cercle.</p>
 
 <hr>
+<div class="d-flex flex-justify-content-center">
+    <div class="dblock">
+        <h3>Propriétés du quadrilatère :</h3>
+        <p>
+            Hauteur ({{ height }})
+            <input type="range" [min]="min" [max]="max" [(ngModel)]="height" (ngModelChange)="update()">
+        </p>
 
-<p>Cercle : <input type="checkbox" [(ngModel)]="isCircle"></p>
+        <p>
+            Largeur ({{ width }})
+            <input type="range" [min]="min" [max]="max" [(ngModel)]="width" (ngModelChange)="update()">
+        </p>
 
-<p>Longueur : {{min}} <input type="range" [min]="min" [max]="max" [(ngModel)]="longueur" (ngModelChange)="update()">{{ max }} ({{ longueur }})</p>
-<p>Largeur : {{min}} <input type="range" [min]="min" [max]="max" [(ngModel)]="largeur" (ngModelChange)="update()">{{ max }} ({{ largeur }})</p>
+        <p>
+            Couleur {{ color }}
+            <input type="color" [(ngModel)]="color" (ngModelChange)="update()">
+        </p>
 
-<p>Couleur : <input type="color" [(ngModel)]="couleur" (ngModelChange)="update()"> ({{ couleur }})</p>
+        <p>
+            Cercle
+            <input type="checkbox" [(ngModel)]="isCircle" (ngModelChange)="update()">
+        </p>
 
-<h3>Bordure</h3>
+        <h3>Propriétés de la bordure :</h3>
 
-<p>Largeur : 1 <input type="range" min="1" max="10" [(ngModel)]="borderWidth" (ngModelChange)="update()"> 10 ({{ borderWidth }})</p>
+        <p>
+            Largeur {{ borderWidth }}
+            <input type="range" min="0" max="10" [(ngModel)]="borderWidth" (ngModelChange)="update()">
+        </p>
 
-<div [ngStyle]="style" [ngClass]="{ circle : isCircle }"></div>
+        <p>
+            Couleur {{ borderColor }}
+            <input type="color" [(ngModel)]="borderColor" (ngModelChange)="update()">
+        </p>
+
+        <p>
+            Style {{ borderStyle }}
+            <select [(ngModel)]="borderStyle" (ngModelChange)="update()">
+                <option value="none">None</option>
+                <option value="hidden">Hidden</option>
+                <option value="dotted">Dotted</option>
+                <option value="dashed">Dashed</option>
+                <option value="solid">Solid</option>
+                <option value="double">Double</option>
+                <option value="groove">Groove</option>
+                <option value="ridge">Ridge</option>
+                <option value="inset">Inset</option>
+                <option value="outset">Outset</option>
+            </select>
+        </p>
+    </div>
+    <div class="dblock p-20 m-10 flex-fill">
+        <div [ngStyle]="style" [ngClass]="{ circle : isCircle }"></div>
+    </div>
+</div>
