--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -133,7 +133,7 @@
         </li>
         <li>
           <a routerLink="/exercices/exo04" routerLinkActive="active-link">
-            ❌ Exercice 04 -
+            ✅ Exercice 04 - Toggle password
           </a>
         </li>
         <li>
