--- a/src/app/demos/demo10/demo10.component.html
+++ b/src/app/demos/demo10/demo10.component.html
@@ -1,6 +1,12 @@
 <h2>Demo 10 - Les Custom Directives</h2>
 
 <p>
+    Les Custom Directives en Angular sont des fonctionnalités puissantes qui permettent de créer des comportements
+    réutilisables et personnalisés pour les éléments DOM dans une application Angular. Elles sont utilisées pour étendre
+    les fonctionnalités des éléments existants ou pour créer de nouveaux éléments avec des comportements spécifiques.
+</p>
+
+<p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis commodi, fugit, reprehenderit temporibus nostrum
     doloribus iste minus incidunt quidem, consequatur impedit beatae voluptatibus officia quia cumque quas. Minima,
     fugiat a.
