Demo 10 - Ajout du HostBinding

--- a/src/app/demos/demo09/demo09.component.html
+++ b/src/app/demos/demo09/demo09.component.html
@@ -21,6 +21,10 @@
     velit odit, quos id cumque cupiditate quod enim laborum fuga laudantium delectus blanditiis qui.
 </div>
 
+<p>
+    Il est impossible d’utiliser plus d’une directive structurelle par élément. (ngIf et ngFor en même temps.)
+</p>
+
 <ng-template #elseblock>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eligendi.
