--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -110,6 +110,11 @@
             ❌ Demo 21 - Le HttpClient
           </a>
         </li>
+        <li>
+          <a routerLink="/demos/demo22" routerLinkActive="active-link">
+            ❌ Demo 22 - L'Interceptor
+          </a>
+        </li>
       </ul>
     </li>
     <li>
@@ -174,6 +179,11 @@
         <li>
           <a routerLink="/exercices/exo11" routerLinkActive="active-link">
             ✅ Exercice 11 - Shopping List
+          </a>
+        </li>
+        <li>
+          <a routerLink="/exercices/exo21" routerLinkActive="active-link">
+            ✅ Exercice 21 - Pokedex avec HttpClient
           </a>
         </li>
       </ul>
