--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -188,5 +188,9 @@
         </li>
       </ul>
     </li>
+
+    <li>statusSubject : {{ isConnected ? "Connecté" : "Déconnecté" }}</li>
+    <li>statusBehaviorSubject : {{ isConnected ? "Connecté" : "Déconnecté" }}</li>
+
   </ul>
 </nav>
