--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -102,7 +102,7 @@
         </li>
         <li>
           <a routerLink="/demos/demo20" routerLinkActive="active-link">
-            ❌ Demo 20 - Les Observables
+            ✅ Demo 20 - Les Observables
           </a>
         </li>
         <li>
