Add HttpClient Demo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,6 +129,14 @@ button {
   margin: 20px;
 }
 
+.mx-20 {
+  margin: 0 20px;
+}
+
+.my-20 {
+  margin: 20px 0;
+}
+
 .dblock > * {
   display: block;
   margin: 10px 0;
