--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -107,12 +107,12 @@
         </li>
         <li>
           <a routerLink="/demos/demo21" routerLinkActive="active-link">
-            ❌ Demo 21 - Le HttpClient
+            ✅ Demo 21 - Le HttpClient
           </a>
         </li>
         <li>
           <a routerLink="/demos/demo22" routerLinkActive="active-link">
-            ❌ Demo 22 - L'Interceptor
+            ✅ Demo 22 - L'Interceptor
           </a>
         </li>
       </ul>
