--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -182,6 +182,16 @@
           </a>
         </li>
         <li>
+          <a class="dropdown-item" routerLink="/exercices/exo12">
+            ✅ Exercice 12 - Shopping List avec services
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" routerLink="/exercices/exo15">
+            ✅ Exercice 15 - Vérification d'âge
+          </a>
+        </li>
+        <li>
           <a routerLink="/exercices/exo21" routerLinkActive="active-link">
             ✅ Exercice 21 - Pokedex avec HttpClient
           </a>
